--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,7 +3,7 @@
         font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 .class-two {
-        font-size: 24;
+        font-size: 24px;
 }
 #id-one {
         font-size: 36px;
