--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,9 @@
-/* Add CSS Styling */
+.class-font {
+    background-color: yellow;
+    font-family: Helvetica, 'Times New Roman', "sans-serif";
+    font-size: 28px;
+}
+
+.class-background {
+    background-color: black;
+}
